--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,8 @@ html
         link(rel='stylesheet', href='/stylesheets/app.css')
         link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Signika+Negative|Shojumaru')
         script(src='http://code.jquery.com/jquery-2.0.0.min.js')
+
+        block head
     body
         .container-fluid
-            .row-fluid
-                block content
+            block content
