renaming home page to broadcaster for clarification

--- a/views/broadcaster.jade
+++ b/views/broadcaster.jade
@@ -1,5 +1,12 @@
 extends layout
 
+
+block head
+
+    script(src='/javascripts/shake.js')
+    script(src='/javascripts/broadcaster.js')
+
+
 block content
 
     .row-fluid.loading
