--- a/public/stylesheets/app.styl
+++ b/public/stylesheets/app.styl
@@ -27,7 +27,6 @@ body
     &.hit_7
         background-color darken($color-accent, 80%)
 
-
 h1
     margin              50px 0
     font-size           4.5em
@@ -43,37 +42,5 @@ p
     color               $color-primary
     text-align          center
 
-
-.box
-    position            relative
-    background-color    $color-relief
-    border              5px solid $color-accent2
-    margin              25px 0 50px
-    outline             7px solid $color-accent
-    height              450px
-
-    &:before
-        content         ''
-        z-index         -1
-        top             -18px
-        left            -18px
-        border          18px solid $color-accent2
-        position        absolute
-        width           100%
-        height          100%
-
-    p
-        color           $color-relief2
-        padding-top     180px
-        font-size       2em
-
-.code-info
-    margin-top          20px
-
-.code
-    font-size           2.5em
-    text-align          center
-    color               $color-accent
-    text-shadow         0 1px 0px $color-accent2
-
+@import 'listener'
 @import 'broadcaster'
