--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,9 +6,9 @@ html
         link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
         link(rel='stylesheet', href='/stylesheets/app.css')
         link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Signika+Negative|Shojumaru')
+        script(src='/socket.io/socket.io.js')
         script(src='http://code.jquery.com/jquery-2.0.0.min.js')
 
         block head
     body
-        .container-fluid
-            block content
+        block content
