--- a/views/listener.jade
+++ b/views/listener.jade
@@ -7,15 +7,17 @@ block head
 
 
 block content
+
+    #listener.container-fluid
     
-    .row-fluid
-        h1 Face Punch!
-        p You've punched this face <span id='count'>134</span> times
+        .row-fluid
+            h1 Face Punch!
+            p You've punched this face <span id='count'>134</span> times
 
-    .row-fluid
-        .box.span6.offset3
-            p Drag Victim Here
+        .row-fluid
+            .box.span6.offset3
+                p Drag Victim Here
 
-    p Your special code is
-    .row-fluid.code-info
-        .code.span2.offset5 ar31j
+        p Your special code is
+        .row-fluid.code-info
+            .code.span2.offset5 ar31j
