touching up css for desktop and mobile views

--- a/public/stylesheets/app.styl
+++ b/public/stylesheets/app.styl
@@ -42,5 +42,9 @@ p
     color               $color-primary
     text-align          center
 
+.container-fluid
+    margin              auto
+    max-width           900px
+
 @import 'listener'
 @import 'broadcaster'
