--- a/public/stylesheets/broadcaster.styl
+++ b/public/stylesheets/broadcaster.styl
@@ -1,3 +1,11 @@
 #broadcaster
     .loading, .ok-go, .error
         display             none
+    .directions
+        margin              20px 0 40px
+        line-height         35px
+    input
+        padding             20px 10px
+        font-size           18px
+    button
+        padding             10px
