--- a/public/stylesheets/listener.styl
+++ b/public/stylesheets/listener.styl
@@ -3,7 +3,8 @@
         position            relative
         background-color    $color-relief
         border              5px solid $color-accent2
-        margin              25px 0 50px
+        margin-top          25px
+        margin-bottom       50px
         outline             7px solid $color-accent
         height              450px
 
