--- a/views/broadcaster.jade
+++ b/views/broadcaster.jade
@@ -14,10 +14,11 @@ block content
             .loading-graphic
         .row-fluid.form
             .row-fluid
-                p Visit facepunch.joelongstreet.com on a desktop browser and enter the code you receive within the form below.
-            form.form-search.row-fluid
-                input.input-medium(type='text')
-                button#start.btn.btn-danger OK
+                p.directions Visit facepunch.joelongstreet.com on a desktop browser and enter the code you receive within the form below.
+            .row-fluid
+                .input-append#form
+                    input.span10(type='text')
+                    button#start.btn.btn-danger OK
         .row-fluid.ok-go
             h2 Start Punching!!!
         .row-fluid.error
