--- a/views/listener.jade
+++ b/views/listener.jade
@@ -21,4 +21,4 @@ block content
 
         p Your special code is
         .row-fluid.code-info
-            .code.span2.offset5 ar31j
+            .code.span2.offset5= code
