successfully matching the listener socket id to the generated code.... this is going to take me a few tries

--- a/public/stylesheets/listener.styl
+++ b/public/stylesheets/listener.styl
@@ -37,7 +37,7 @@
     .code-info
         margin-top          20px
 
-    .code
+    #code
         font-size           2.5em
         text-align          center
         color               $color-accent
