successfully paring listener and broadcast socket ids

--- a/views/broadcaster.jade
+++ b/views/broadcaster.jade
@@ -17,7 +17,7 @@ block content
                 p.directions Visit facepunch.joelongstreet.com on a desktop browser and enter the code you receive within the form below.
             .row-fluid
                 .input-append#form
-                    input.span10(type='text')
+                    input.span10#secret(type='text')
                     button#start.btn.btn-danger OK
         .row-fluid.ok-go
             h2 Start Punching!!!
