--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html
     head
         title FacePunch
+        meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
         link(rel='stylesheet', href='/stylesheets/bootstrap.css')
         link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
         link(rel='stylesheet', href='/stylesheets/app.css')
