--- a/views/listener.jade
+++ b/views/listener.jade
@@ -18,7 +18,7 @@ block content
             #victim.box.span6.offset3
                 p Drag Victim Here
 
-        p Your special code is
+        p Visit the address <a href='http://facepunch.jit.su'>facepunch.jit.su</a> on your mobile device to start face punching. Your special code is
         .row-fluid.code-info
             #code.span2.offset5= code
 
