--- a/public/stylesheets/broadcaster.styl
+++ b/public/stylesheets/broadcaster.styl
@@ -1,11 +1,20 @@
 #broadcaster
+
     .loading, .ok-go, .error
         display             none
     .directions
         margin              20px 0 40px
         line-height         35px
     input
-        padding             20px 10px
-        font-size           18px
+        width               45%
+        margin-left         10px
+        padding             30px 0
+        font-size           30px
+        font-weight         bold
+        text-align          center
+        color               $color-accent
+        letter-spacing      3px
     button
-        padding             10px
+        padding             20px
+        font-weight         bold
+        font-size           20px
