adding share buttons, Fixes #8

--- a/views/listener.jade
+++ b/views/listener.jade
@@ -18,6 +18,14 @@ block content
             #victim.box.span6.offset3
                 p Drag Victim Here
 
+        .row-fluid.social
+            a#twitter_share.btn.social.btn-info(href='#')
+                i.icon-twitter
+                | Tweet
+            a#facebook_share.btn.social.btn-primary(href='#')
+                i.icon-facebook
+                | Facebook
+
         p Visit the address <a href='http://facepunch.jit.su'>facepunch.jit.su</a> on your mobile device to start face punching. Your special code is
         .row-fluid.code-info
             #code.span2.offset5= code
