--- a/public/stylesheets/listener.styl
+++ b/public/stylesheets/listener.styl
@@ -12,12 +12,13 @@ body
         background-color darken($color-accent, 80%)
 
 #listener
+    // Image Definition
     #victim
         position            relative
         background-color    $color-relief
         border              5px solid $color-accent2
         margin-top          25px
-        margin-bottom       50px
+        margin-bottom       35px
         outline             7px solid $color-accent
         height              350px
         position            relative
@@ -47,9 +48,22 @@ body
             top             0
 
 
+    // Social Garbage
+    .btn.social
+        float               right
+        margin-bottom       15px
+        margin-right        10px
+        i
+            margin-right    10px
+    .icon-twitter
+        background          url('/images/twitter.png') no-repeat
+    .icon-facebook
+        background          url('/images/facebook.png') no-repeat
+
+
+    // Code Stuff
     .code-info
         margin-top          20px
-
     #code
         font-size           2.5em
         text-align          center
