enforce a numeric only keypad on mobile

--- a/views/broadcaster.jade
+++ b/views/broadcaster.jade
@@ -16,7 +16,7 @@ block content
                 p.directions Visit <a href='http://facepunch.jit.su'>facepunch.jit.su</a> on a desktop browser and enter your special code
             .row-fluid
                 .input-append#form
-                    input.span10#secret(type='text')
+                    input.span10#secret(type='tel')
                     button#start.btn.btn-danger OK
         .row-fluid.ok-go
             h2 Start Punching!!!
