--- a/public/stylesheets/broadcaster.styl
+++ b/public/stylesheets/broadcaster.styl
@@ -19,3 +19,6 @@
         padding             20px
         font-weight         bold
         font-size           20px
+    .ok-go
+        h2, p 
+            -webkit-user-select none
