--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,9 +9,11 @@ html
         link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Signika+Negative|Shojumaru')
         script(src='/socket.io/socket.io.js')
         script(src='http://code.jquery.com/jquery-2.0.0.min.js')
+        script(src='/javascripts/bootstrap.js')
 
         block head
     body
         block content
 
         include analytics.html
+        include facebook.html
