--- a/views/listener.jade
+++ b/views/listener.jade
@@ -16,6 +16,7 @@ block content
 
         .row-fluid
             #victim.box.span6.offset3
+                img
                 p Drag Victim Here
                 a#facebook-kinect.btn.social.btn-primary(href='#')
                     i.icon-facebook
