cleaning up and commenting friendSelector code. Moving to it's own file for clarity

--- a/views/listener.jade
+++ b/views/listener.jade
@@ -4,6 +4,7 @@ extends layout
 block head
 
     script(src='/javascripts/listener.js')
+    script(src='/javascripts/friendSelector.js')
 
 
 block content
