few extra ui tweaks to make facebook work prettily. Fixes #6

--- a/views/listener.jade
+++ b/views/listener.jade
@@ -17,7 +17,7 @@ block content
 
         .row-fluid
             #victim.box.span6.offset3
-                img
+                .img
                 p Drag Victim Here
                 a#facebook-kinect.btn.social.btn-primary(href='#')
                     i.icon-facebook
