--- a/public/stylesheets/listener.styl
+++ b/public/stylesheets/listener.styl
@@ -41,9 +41,11 @@ body
             display         none
             top             0
 
-        img
+        .img
             position        absolute
+            background-size cover
             width           100%
+            height          100%
             top             0
 
 
