--- a/public/stylesheets/listener.styl
+++ b/public/stylesheets/listener.styl
@@ -50,6 +50,13 @@ body
             height          100%
             top             0
 
+        &.loading
+            .img
+                background-position center center
+                background-size     auto
+                background-repeat   no-repeat
+
+
 
     // Social Garbage
     .btn.social
