no more loading of bamboo on mobile

--- a/public/stylesheets/listener.styl
+++ b/public/stylesheets/listener.styl
@@ -1,4 +1,4 @@
-body
+body#listen
     transition          .1s background-color linear
     background          url('/images/noise.png') repeat, url('/images/background-left.svg') no-repeat top left, url('/images/background-right.svg') no-repeat top right
     background-color    $color-relief
