--- a/views/listener.jade
+++ b/views/listener.jade
@@ -2,7 +2,8 @@ extends layout
 
 
 block head
-
+    
+    - var bodyId = 'listen'
     script(src='/javascripts/listener.js')
     script(src='/javascripts/friendSelector.js')
 
