--- a/public/stylesheets/listener.styl
+++ b/public/stylesheets/listener.styl
@@ -134,3 +134,9 @@ body#listen
             a
                 background-image linear-gradient(to bottom, $color-primary, darken($color-primary, 10));
                 background-color $color-primary
+
+@media (max-width: 767px)
+    #listener
+        width               75%
+        margin-left         auto
+        margin-right        auto
