using local jquery and secure protocols for fonts for easier https testing

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,9 +6,9 @@ html
         link(rel='stylesheet', href='/stylesheets/bootstrap.css')
         link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
         link(rel='stylesheet', href='/stylesheets/app.css')
-        link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Signika+Negative|Shojumaru')
+        link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Signika+Negative|Shojumaru')
         script(src='/socket.io/socket.io.js')
-        script(src='http://code.jquery.com/jquery-2.0.0.min.js')
+        script(src='/javascripts/jquery-2.0.0.min.js')
         script(src='/javascripts/bootstrap.js')
 
         - var bodyId = '';
