testing for accelerometer support, showing corresponding message if failed

--- a/views/broadcaster.jade
+++ b/views/broadcaster.jade
@@ -20,7 +20,7 @@ block content
                     button#start.btn.btn-danger OK
         .row-fluid.ok-go
             h2 Start Punching!!!
-            p Like, literally take your phone and start making flailing punching motions at the screen
+            p#instructions Like, literally take your phone and start making flailing punching motions at the screen
         .row-fluid.error
             h3 Looks like the code you entered was wrong...
             .row-fluid
