changing from .jit.su to .org

--- a/views/broadcaster.jade
+++ b/views/broadcaster.jade
@@ -13,7 +13,7 @@ block content
             .loading-graphic
         .row-fluid.form
             .row-fluid
-                p.directions Visit <a href='http://facepunch.jit.su'>facepunch.jit.su</a> on a desktop browser and enter your special code
+                p.directions Visit <a href='http://facepunch.og'>facepunch.org</a> on a desktop browser and enter your special code
             .row-fluid
                 .input-append#form
                     input.span10#secret(type='tel')
