--- a/views/listener.jade
+++ b/views/listener.jade
@@ -32,7 +32,7 @@ block content
                 i.icon-facebook
                 | Facebook
 
-        p Visit the address <a href='http://facepunch.jit.su'>facepunch.jit.su</a> on your mobile device to start face punching. Your special code is
+        p Visit the address <a href='http://facepunch.org'>facepunch.org</a> on your mobile device to start face punching. Your special code is
         .row-fluid.code-info
             #code.span2.offset5= code
 
