--- a/views/analytics.html
+++ b/views/analytics.html
@@ -4,7 +4,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-3920837-12', 'jit.su');
+  ga('create', 'UA-3920837-12', 'facepunch.org');
   ga('send', 'pageview');
 
 </script>
