--- a/public/stylesheets/broadcaster.styl
+++ b/public/stylesheets/broadcaster.styl
@@ -9,12 +9,11 @@
     input
         width               45%
         margin-left         10px
-        padding             30px 0
+        height              63px
         font-size           30px
         font-weight         bold
         text-align          center
         color               $color-accent
-        letter-spacing      3px
     button
         padding             20px
         font-weight         bold
