fix background scaling issues

--- a/public/stylesheets/app.styl
+++ b/public/stylesheets/app.styl
@@ -7,6 +7,9 @@ $font-primary       = 'Signika Negative', sans-serif
 $font-accent        = 'Shojumaru', cursive
 
 
+html
+    height              100%
+
 body
     background          $color-relief url('/images/noise.png') repeat
     font-family         $font-primary
