--- a/views/listener.jade
+++ b/views/listener.jade
@@ -14,7 +14,7 @@ block content
     
         .row-fluid
             h1 Face Punch!
-            p You've punched this face <span id='count'>0</span> times
+            p.background You've punched this face <span id='count'>0</span> times
 
         .row-fluid
             #victim.box.span6.offset3
@@ -32,7 +32,7 @@ block content
                 i.icon-facebook
                 | Facebook
 
-        p Visit the address <a href='http://facepunch.org'>facepunch.org</a> on your mobile device to start face punching. Your special code is
+        p.background Visit the address <a href='http://facepunch.org'>facepunch.org</a> on your mobile device to start face punching. Your special code is
         .row-fluid.code-info
             #code.span2.offset5= code
 
