change link to punch.joelongstreet.com

--- a/views/listener.jade
+++ b/views/listener.jade
@@ -32,7 +32,7 @@ block content
                 i.icon-facebook
                 | Facebook
 
-        p.background Visit the address <a href='http://facepunch.org'>facepunch.org</a> on your mobile device to start face punching. Your special code is
+        p.background Visit the address <a href='http://punch.joelongstreet.com'>punch.joelongstreet.com</a> on your mobile device to start face punching. Your special code is
         .row-fluid.code-info
             #code.span2.offset5= code
 
